adding the docker changes